@@ -3,6 +3,8 @@
   - /etc/sssd/ owner is no longer managed
   - /etc/sssd/ perms went from 0640 to 0711
   - /etc/init.d/sssd went from 0754 to 0755 on EL6
+- Cleanup requires in metadata.json
+- Cleanup unneeded fixtures and update CI assets
 
 * Wed Mar 28 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.1.1-0
 - sssd::provider::ad::ldap_schema should be a string, not a boolean
